fix(modal): fix modal not showing footer

--- a/src/components/Modal/src/index.less
+++ b/src/components/Modal/src/index.less
@@ -26,7 +26,7 @@
     line-height: 16px;
 
     .base-title {
-      cursor: move;
+      cursor: move !important;
     }
   }
 
@@ -56,7 +56,6 @@
   }
 
   .ant-modal-body {
-    // background: #f1f2f6;
     padding: 0;
   }
 
@@ -69,7 +68,6 @@
   }
 
   &-header {
-    // padding: 12.5px 24px;
     padding: 16px;
   }
 
@@ -79,7 +77,6 @@
 
   &-footer {
     padding: 10px 26px 26px 16px;
-    // border-top: none;
 
     button + button {
       margin-left: 10px;
